fix align issue in header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,16 +3400,21 @@ input, select, textarea {
 			text-align: right;
 		}
 
-			#header > nav > ul {
-				margin: 0;
-				padding: 0;
-			}
+		#header > nav > ul {
+  		margin: 0;
+  		padding: 0;
+  		list-style: none;
+  		display: flex;             
+  		align-items: center;       
+  		justify-content: flex-end; 
+  		height: 100%;              
+		}
 
 				#header > nav > ul > li {
-					display: inline-block;
+					/*display: inline-block;*/
 					margin-left: 1.75em;
 					padding: 0;
-					vertical-align: middle;
+					/*vertical-align: middle;*/
 				}
 
 					#header > nav > ul > li:first-child {
